--- a/bar-interaction-viewer/app/app.html
+++ b/bar-interaction-viewer/app/app.html
@@ -15,8 +15,8 @@
 
 <p></p>
 <p>
-  Data &amp; web services provided by The Bio-Analytic Resource for Plant
-  Biology (BAR): <a href="http://bar.utoronto.ca/webservices" target="_blank">http://bar.utoronto.ca/webservices/</a>.
+  Data &amp; web services provided by
+  <a href="http://bar.utoronto.ca/webservices" target="_blank">The Bio-Analytic Resource for Plant Biology (BAR).</a>
 </p>
 </div>
 <script type="text/javascript" src="scripts/app.js"></script>
